# gitpervisor

./: .gitignore  LICENSE  README.ko.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/: dependabot.yml
.github/workflows/: release.yml
DOCS/: DESIGN.md  TROUBLESHOOTING.md  api-client-design.md  auto-update-design.md  browser-feature-design.md  readme-website-refresh-design.md  tasks-2026-06-design.md
DOCS/task/: 00-INDEX.md  01-aggregate-hotkey.md  02-aggregate-new-terminal.md  03-themes.md  04-git-remote-freshness.md  05-resource-monitor-popup.md  06-browser-popup-window.md  07-browser-session-persistence.md  08-find-in-files.md  09-quick-open.md  10-python-outline.md  11-find-references.md  12-occurrence-highlight.md  13-symbol-search.md  14-hover-docstring.md  15-formatter.md  16-lint-markers.md  17-lsp-integration.md  18-settings-ux.md
designs/: landing.pen  main-screen-v2.pen  main-screen.pen
scripts/: build-mac-dmg.sh  fetch-lsp.mjs  fetch-tools.mjs  verify-apiclient.mjs  verify-browser.mjs
scripts/mac/: quarantine-helper.command
src/: App.tsx  FloatingTerminal.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/resources/tools/: README.md
src-tauri/src/: claude_usage.rs  db.rs  error.rs  fetch_scheduler.rs  lib.rs  main.rs  monitor.rs  notifications.rs  proc_icons.rs  state.rs  watcher.rs
src-tauri/src/commands/: actions.rs  browser.rs  check.rs  diagnostics.rs  diff.rs  disk.rs  format.rs  http.rs  lint.rs  log.rs  lsp.rs  mod.rs  notes.rs  open.rs  projects.rs  quarantine.rs  search.rs  settings.rs  status.rs  sync.rs  terminal.rs  tree.rs
src-tauri/src/git/: mod.rs  parse_log.rs  parse_status.rs  runner.rs  types.rs
src-tauri/src/lsp/: acquire.rs  mod.rs
src-tauri/src/tools/: runner.rs
src/components/: AggregateTerminals.tsx  ErrorBoundary.tsx  FloatTitleBar.tsx  GitGate.tsx  KeyboardShortcuts.tsx  ProjectPathMissing.tsx  StatusBar.tsx  SysMonitor.tsx  TitleBar.tsx
src/components/apiclient/: ApiClientTab.tsx  BodyEditor.tsx  CollectionSidebar.tsx  EnvDialog.tsx  KeyValueEditor.tsx  MonacoBox.tsx  RequestBuilder.tsx  RequestTabs.tsx  ResponsePanel.tsx
src/components/changes/: ChangesPanel.tsx  CommitForm.tsx
src/components/common/: ConfirmDialog.tsx  EmptyState.tsx  PromptDialog.tsx  QuickPick.tsx  ResizeHandle.tsx  StatusDot.tsx  Toast.tsx
src/components/db/: ConnectionDialog.tsx  DbSidebar.tsx  DbWorkspace.tsx
src/components/diff/: DiffViewer.tsx  ImageView.tsx  MarkdownView.tsx  find-references.ts  format-provider.ts  goto-definition.ts  lint-markers.ts  monaco-setup.ts  python-outline.ts
src/components/image/: ImageEditor.tsx
src/components/log/: BranchesPane.tsx  CommitDetailPane.tsx  CommitList.tsx  LogPanel.tsx
src/components/memo/: MemoDialog.tsx  MemoPopover.tsx
src/components/quickopen/: QuickOpenHost.tsx
src/components/search/: SearchPanel.tsx
src/components/settings/: SettingsDialog.tsx  settings-index.ts
src/components/settings/sections/: AppearanceSection.tsx  CodeToolsSection.tsx  GeneralSection.tsx  MaintenanceSection.tsx  NotifySection.tsx  TerminalSection.tsx  UpdateSection.tsx  shared.tsx
src/components/sidebar/: ProjectItem.tsx  ProjectList.tsx
src/components/symbolsearch/: SymbolSearch.tsx
src/components/sysmon/: SysMonitorWindow.tsx  prefs.ts
src/components/toolbar/: Toolbar.tsx
src/components/tree/: FileTreePanel.tsx
src/components/workspace/: BrowserPane.tsx  Favicon.tsx  PaneControls.tsx  PaneTree.tsx  TerminalMount.tsx  TerminalPane.tsx  ViewerFileTabs.tsx  ViewerTab.tsx  WorkspaceTabs.tsx
src/lib/: agent-notify.ts  apiclient.ts  browser.ts  change-kind.ts  clipboard.ts  events.ts  file-icon.tsx  floating.ts  format.ts  fuzzy.ts  image-codec.ts  ipc.ts  language-map.ts  logging.ts  method-color.ts  platform.ts  terminal-engine.ts  terminal.ts  themes.ts  use-panel-width.ts
src/lib/lsp/: client.ts  providers.ts  sync.ts
src/queries/: index.ts
src/stores/: agentActivity.ts  apiclient.ts  browser.ts  db.ts  ops.ts  search.ts  terminals.ts  treeState.ts  ui.ts  updater.ts
tests/e2e/: README.md  run.mjs
tests/e2e/lib/: cdp.mjs  git-fixture.mjs  report.mjs
tests/e2e/suites/: 01-system.mjs  02-projects-tree.mjs  03-status-changes.mjs  04-sync-history.mjs  05-notes.mjs  06-terminal.mjs  07-browser.mjs  08-apiclient.mjs  09-db.mjs  10-codenav.mjs  11-disk.mjs  12-new-commands.mjs  13-float-window.mjs  14-frontend-dom.mjs  15-tree-fileops.mjs  16-browser-session.mjs  17-remote-freshness.mjs  18-sysmon.mjs  19-themes.mjs  20-occurrence-highlight.mjs  21-python-outline.mjs  22-quick-open.mjs  23-symbol-search.mjs  24-find-in-files.mjs  25-find-references.mjs  26-formatter.mjs  27-lint.mjs  28-lsp.mjs  29-settings-ux.mjs
website/: README.md  next.config.ts  package-lock.json  package.json
website/app/: globals.css  layout.tsx  page.tsx
website/components/: AppMockup.tsx  DownloadButtons.tsx  Features.tsx  FinalCta.tsx  Footer.tsx  Hero.tsx  Nav.tsx  OpenSource.tsx  icons.tsx
website/lib/: github.ts  use-os.ts
