[package]
name = "gitpervisor"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "gitpervisor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2.7.1"
tauri-plugin-store = "2.4.3"
dunce = "1.0.5"
tokio = { version = "1.52.3", features = ["process", "time", "macros"] }
uuid = { version = "1.23.3", features = ["v4"] }
chrono = "0.4.45"
futures = "0.3.32"
notify-debouncer-full = "0.7.0"
portable-pty = "0.8.1"
sysinfo = "0.33"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_System_Performance"] }

[dev-dependencies]
tempfile = "3.27.0"

