[package]
name = "gitpervisor"
version = "0.2.0"
description = "멀티 레포 Git 상태를 한 화면에서 감시하고 diff·커밋·푸시까지 처리하는 데스크톱 대시보드"
authors = ["imtelloper <newtype9556@gmail.com>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/imtelloper/gitpervisor"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "gitpervisor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# 임베디드 브라우저 탭은 Window::add_child(자식 webview)를 쓰며, 이는 desktop+unstable feature 게이트다.
tauri = { version = "=2.11.2", features = ["unstable"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2.7.1"
tauri-plugin-store = "2.4.3"
tauri-plugin-notification = "2"
dunce = "1.0.5"
tokio = { version = "1.52.3", features = ["process", "time", "macros", "net"] }
uuid = { version = "1.23.3", features = ["v4"] }
chrono = "0.4.45"
futures = "0.3.32"
notify-debouncer-full = "0.7.0"
portable-pty = "0.8.1"
sysinfo = "0.33"
mongodb = "3"
keyring = { version = "3", features = ["windows-native"] }
# SQL Server(TDS) 드라이버 — native-tls(Windows schannel)로 로그인 암호화
tiberius = { version = "0.12", default-features = false, features = ["tds73", "native-tls", "chrono", "rust_decimal", "winauth"] }
tokio-util = { version = "0.7", features = ["compat"] }
rust_decimal = "1"
# API 클라이언트 HTTP 엔진 (DOCS/api-client-design.md §4.6). tauri가 이미 0.13.4를 트리에 가지므로
# 0.13으로 통일해 트리 1벌 유지(0.12는 semver 비호환 → 2벌 컴파일). rustls-tls로 verifyTls 결정론적 토글.
# 0.13에서 TLS feature는 "rustls"(0.12의 "rustls-tls" 대체). rustls 백엔드 = verifyTls 결정론적 토글.
reqwest = { version = "0.13", default-features = false, features = ["rustls", "http2", "charset", "gzip", "brotli", "deflate", "zstd", "json", "query", "multipart", "stream", "cookies"] }
serde_urlencoded = "0.7"
base64 = "0.22"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_System_Performance"] }
clipboard-win = "5"

[dev-dependencies]
tempfile = "3.27.0"

# 배포 바이너리 최적화 — Thin LTO + 단일 codegen 유닛으로 크로스-크레이트 인라이닝/최적화를
# 얻고 strip으로 심볼 제거(바이너리 축소). 무거운 의존성 트리(mongodb/tiberius/reqwest/tauri)
# 때문에 fat LTO(lto=true)는 릴리스 빌드를 15~40분+로 늘리고 RAM도 크게 먹는데, IPC 바운드
# 앱이라 런타임 이득은 thin 대비 한 자릿수 %에 그쳐 thin이 비용/효과상 낫다. 릴리스 빌드(=설치본)
# 에만 적용되며 dev/디버그 속도엔 영향이 없다. panic은 unwind 유지 — 커맨드 내부 패닉이 앱
# 전체를 죽이지 않고 해당 작업만 실패하도록(crash 내성).
[profile.release]
codegen-units = 1
lto = "thin"
strip = true

