[package]
name = "gitpervisor"
version = "0.2.0"
description = "멀티 레포 Git 상태를 한 화면에서 감시하고 diff·커밋·푸시까지 처리하는 데스크톱 대시보드"
authors = ["imtelloper <newtype9556@gmail.com>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/imtelloper/gitpervisor"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "gitpervisor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# 임베디드 브라우저 탭은 Window::add_child(자식 webview)를 쓰며, 이는 desktop+unstable feature 게이트다.
# image-png: 런타임에 창/작업표시줄 아이콘을 PNG에서 설정(Image::from_bytes)하기 위함.
tauri = { version = "=2.11.2", features = ["unstable", "image-png"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2.7.1"
tauri-plugin-store = "2.4.3"
tauri-plugin-notification = "2"
tauri-plugin-log = "2"
# 네이티브 클립보드 — WKWebView(macOS)의 navigator.clipboard가 비-ASCII(한글)를 UTF-8→MacRoman
# 이중인코딩으로 깨뜨리는 문제 회피용. 복사/붙여넣기 모두 이 플러그인 경로로 일원화(arboard 기반).
tauri-plugin-clipboard-manager = "2"
log = "0.4"
dunce = "1.0.5"
tokio = { version = "1.52.3", features = ["process", "time", "macros", "net"] }
uuid = { version = "1.23.3", features = ["v4"] }
chrono = "0.4.45"
futures = "0.3.32"
notify-debouncer-full = "0.7.0"
portable-pty = "0.8.1"
sysinfo = "0.33"
mongodb = "3"
keyring = { version = "3", features = ["windows-native"] }
# SQL Server(TDS) 드라이버 — native-tls(Windows schannel)로 로그인 암호화
tiberius = { version = "0.12", default-features = false, features = ["tds73", "native-tls", "chrono", "rust_decimal", "winauth"] }
# PostgreSQL/MySQL/SQLite 통합 드라이버 — Any 드라이버로 URL 스킴별 단일 코드경로.
# TLS는 tiberius와 동일하게 native-tls(중복 TLS 스택 회피). sqlite는 libsqlite3 번들(C 컴파일러 필요).
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "tls-native-tls", "any", "postgres", "mysql", "sqlite"] }
# 이메일(SMTP) 알림 — tokio + native-tls(implicit 465 / STARTTLS 587).
lettre = { version = "0.11", default-features = false, features = ["builder", "smtp-transport", "tokio1-native-tls", "hostname"] }
# Redis(키-값) 드라이버 — tokio 비동기 + 자동 재연결 ConnectionManager + native-tls(rediss://).
redis = { version = "0.27", default-features = false, features = ["tokio-comp", "connection-manager", "tokio-native-tls-comp"] }
tokio-util = { version = "0.7", features = ["compat"] }
rust_decimal = "1"
# API 클라이언트 HTTP 엔진 (DOCS/api-client-design.md §4.6). tauri가 이미 0.13.4를 트리에 가지므로
# 0.13으로 통일해 트리 1벌 유지(0.12는 semver 비호환 → 2벌 컴파일). rustls-tls로 verifyTls 결정론적 토글.
# 0.13에서 TLS feature는 "rustls"(0.12의 "rustls-tls" 대체). rustls 백엔드 = verifyTls 결정론적 토글.
reqwest = { version = "0.13", default-features = false, features = ["rustls", "http2", "charset", "gzip", "brotli", "deflate", "zstd", "json", "query", "multipart", "stream", "cookies"] }
serde_urlencoded = "0.7"
base64 = "0.22"
# LSP 서버 앱 내 다운로드(태스크 17 M2 획득 자동화) — npm tgz 해제 + sha512 무결성.
# node 런타임 다운로드(PATH에 node 없을 때): win=zip, unix=tar.gz(flate2+tar), 무결성=SHASUMS256(sha256).
flate2 = "1"
tar = "0.4"
sha2 = "0.10"
zip = { version = "2", default-features = false, features = ["deflate"] }

[target.'cfg(not(windows))'.dependencies]
# 터미널 스마트 붙여넣기(term_paste)의 Linux(X11)/macOS 클립보드 읽기 — Windows의 clipboard-win 대응.
# wayland-data-control은 의도적으로 끈다: GNOME 등 wlr-data-control 미지원 컴포지터에서 초기화가
# 깨지는 사례(tauri#8515)가 있고, XWayland 브리지 경유 X11 경로가 GNOME/KDE에서 안정적이다.
# image-data: 클립보드 이미지(스크린샷)→RGBA 디코드(내부적으로 image 크레이트의 png 디코더 사용).
arboard = { version = "3", default-features = false, features = ["image-data"] }
# 클립보드 이미지 RGBA→PNG 파일 인코딩(임시 파일 경로 붙여넣기). tauri image-png가 이미 트리에
# 같은 0.25를 가지므로 추가 컴파일 비용 최소.
image = { version = "0.25", default-features = false, features = ["png"] }

[target.'cfg(windows)'.dependencies]
# Win32_UI_Shell: 파일트리 실행 파일 더블클릭을 ShellExecuteW로 띄운다(cmd 셸 파싱 우회 — 인젝션 차단).
# Win32_Graphics_Gdi: 리소스 모니터 프로세스 아이콘 추출(HICON→BGRA, GetIconInfo/GetDIBits).
windows-sys = { version = "0.59", features = ["Win32_System_Performance", "Win32_UI_Shell", "Win32_UI_WindowsAndMessaging", "Win32_Graphics_Gdi", "Win32_Foundation"] }
# 추출한 아이콘 BGRA→PNG 인코딩(리소스 모니터). tauri image-png가 같은 0.25를 트리에 가져 비용 미미.
image = { version = "0.25", default-features = false, features = ["png"] }
clipboard-win = "5"
# AI 완료 OS 토스트를 앱 AUMID로 직접 띄운다 — 알림 플러그인은 dev(target/debug)에서 app_id를
# 안 붙여 PowerShell 명의로 뜨므로, 직접 토스트 + AUMID(DisplayName/Icon) 레지스트리 등록으로 대체.
tauri-winrt-notification = "0.7"
windows-registry = "0.6"

[dev-dependencies]
tempfile = "3.27.0"

# 배포 바이너리 최적화 — Thin LTO + 단일 codegen 유닛으로 크로스-크레이트 인라이닝/최적화를
# 얻고 strip으로 심볼 제거(바이너리 축소). 무거운 의존성 트리(mongodb/tiberius/reqwest/tauri)
# 때문에 fat LTO(lto=true)는 릴리스 빌드를 15~40분+로 늘리고 RAM도 크게 먹는데, IPC 바운드
# 앱이라 런타임 이득은 thin 대비 한 자릿수 %에 그쳐 thin이 비용/효과상 낫다. 릴리스 빌드(=설치본)
# 에만 적용되며 dev/디버그 속도엔 영향이 없다. panic은 unwind 유지 — 커맨드 내부 패닉이 앱
# 전체를 죽이지 않고 해당 작업만 실패하도록(crash 내성).
[profile.release]
codegen-units = 1
lto = "thin"
strip = true

